--- a/app/styles/sass/pages/app.scss
+++ b/app/styles/sass/pages/app.scss
@@ -37,6 +37,7 @@
                 border-bottom: 1px dashed #4492A9;
                 display: inline-block;
                 margin-bottom: 65px;
+                
                 &:hover {
                     border-bottom: 1px solid #4492A9;
                 }
@@ -45,7 +46,8 @@
                     display: block;
                     width: 10px;
                     height: 10px;
-                    background: url(../images/dist/arrow-btn-blue.svg);
+                    background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.00195 11L11.002 1.00002M11.002 1.00002L2.00195 1.00002M11.002 1.00002L11.002 10' stroke='%234492A9' stroke-width='1.5'/%3E%3C/svg%3E%0A");
+
                     background-size: contain;
                     background-position: center;
                     background-repeat: no-repeat;
@@ -53,8 +55,7 @@
                     right: 0;
                     top: 50%;
                     transform: translateY(-50%);
-                    
-                    
+
                 }
             }
             &-btn {
