--- a/app/styles/sass/pages/media.scss
+++ b/app/styles/sass/pages/media.scss
@@ -1,6 +1,31 @@
 .media {
     &-page {
-        background: #F3ECE9;;
+        background: #F3ECE9;
+        background-image: url(../images/dist/admin/bg-media.png);
+        background-position: top 150px center;
+        background-repeat: no-repeat;
+    
+    
+        &__title {
+            text-align: center;
+           
+        }
+        @media screen and (max-width: $laptop-landscape) {
+            background-position: top 120px center;
+            background-size: calc(100% + 100px) auto;
+        }
+        @media screen and (max-width: $laptop-portrait) {
+            background-position: top 120px center;
+        }
+    
+        @media screen and (min-width: $mobile + 1) {
+            &__title {
+                margin-bottom: 100px;
+            }
+            // .header {
+            //     background-color: #e8f2f4;
+            // }
+        }
         &__title {
             text-align: center;
             margin-bottom: 32px;
@@ -10,6 +35,7 @@
             font-weight: 400;
             font-size: 24px;
             text-align: center;
+            color: #515D6F;
         }
     }
     &-nav {
@@ -24,6 +50,10 @@
     }
     &-slider {
         overflow: visible;
+        margin-bottom: 165px;
+        &__wrapper {
+            align-items: center;
+        }
     }
     &-slide {
 
@@ -35,10 +65,10 @@
             flex-direction: column;
             justify-content: space-between;
             transition: all 400ms;
-            height: 400px;
             &:not(.swiper-slide-active) {
                 opacity: 0.8;
-                // transform: scale(0.9);
+                transform: scale(0.8);
+                pointer-events: none;
                 
             }
             &__img {
@@ -46,7 +76,36 @@
                 height: auto;
             }
             &__link {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 24px;
+                /* identical to box height, or 150% */
+                
+                
+                color: #37729C;
+                border-bottom: 1px dashed #37729C;
+                position: relative;
+                display: inline-block;
+                padding-right: 22px;
+                align-self: flex-start;
+                cursor: pointer;
+                &:hover {
+                    border-bottom: 1px solid #37729C;
+                }
+                &:after {
+                    content: "";
+                    display: block;
+                    width: 10px;
+                    height: 10px;
+                    background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L11 11M11 11V2M11 11H2' stroke='%2337729C' stroke-width='1.5'/%3E%3C/svg%3E");                    background-size: contain;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    position: absolute;
+                    right: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
 
+                }
             }
       
 
@@ -54,6 +113,9 @@
     }
     &-pagination {
         bottom: -50px !important;
+        .swiper-pagination-bullet {
+            background: #74ABAE;
+        }
     }
 
 
@@ -79,23 +141,24 @@
             &:hover {
                 background: transparent;
                 color: #221f20;
-                &:before {
+                &:after {
                     content: url("data:image/svg+xml,%3Csvg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.5999 1.45825L9.16657 6.89159C8.5249 7.53325 7.4749 7.53325 6.83324 6.89159L1.3999 1.45825' stroke='%23221F20' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 
                 }
             }
 
 
-            &:before {
+            &:after {
                 content: url("data:image/svg+xml,%3Csvg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.5999 1.45825L9.16657 6.89159C8.5249 7.53325 7.4749 7.53325 6.83324 6.89159L1.3999 1.45825' stroke='white' stroke-width='1.5' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-                position: absolute;
-                right: 16px;
-                top: 50%;
-                transform: translateY(-50%);
-                transition: all 400ms;
+                // position: absolute;
+                // right: 16px;
+                // top: 50%;
+                // transform: translateY(-50%);
+                // transition: all 400ms;
                 transform-origin: center;
                 z-index: 1;
                 pointer-events: none;
+                margin-left: 10px;
             }
             &--selected {
                 color: #fff;
@@ -147,5 +210,173 @@
             }
     
         }
+    }
+
+
+    &-list {
+        background: rgba($color: #fff, $alpha: 0.8);
+        border-radius: 24px;
+        padding: 80px 60px 120px;
+        &__title {
+            font-size: 40px;
+            margin-bottom: 0;
+        }
+        &__inner {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-bottom: 64px;
+
+        }
+        &__item {
+            margin-top: 64px;
+            background: #FFFFFF;
+            /* Blue group/Blue 1 */
+
+            border: 1px solid #D9EAED;
+            border-radius: 24px;
+            padding: 20px 20px 30px;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            width: calc(33% - 32px);
+
+            &-img {
+                height: auto;
+                margin-bottom: 20px;
+            }
+            &-link {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 24px;
+                /* identical to box height, or 150% */
+                
+                
+                color: #37729C;
+                border-bottom: 1px dashed #37729C;
+                position: relative;
+                display: inline-block;
+                padding-right: 22px;
+                align-self: flex-start;
+                cursor: pointer;
+                &:hover {
+                    border-bottom: 1px solid #4492A9;
+                }
+                &:after {
+                    content: "";
+                    display: block;
+                    width: 10px;
+                    height: 10px;
+                    background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.00195 11L11.002 1.00002M11.002 1.00002L2.00195 1.00002M11.002 1.00002L11.002 10' stroke='%2337729C' stroke-width='1.5'/%3E%3C/svg%3E%0A");
+                    background-size: contain;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    position: absolute;
+                    right: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+
+                }
+            }
+        }
+        &__nav {
+            text-align: center;
+        }
+    }
+
+    @media screen and (max-width: $laptop-landscape) {
+        &-list {
+            padding: 60px 20px;
+            &__inner {
+                
+                margin-bottom: 32px;
+            }
+            &__item {
+                width: calc(33% - 10px);
+                margin-top: 20px;
+            }
+        }
+        &-slider {
+            margin-bottom: 120px;
+        }
+    }
+    @media screen and (max-width: $laptop-portrait) {
+
+        &-slider {
+            margin-bottom: 100px;
+        }
+
+        
+    }
+
+    @media screen and (max-width: $mobile) {
+        &-page {
+            &__title {
+                margin-bottom: 24px;
+            }
+            &__subtitle {
+                margin-bottom: 24px;
+            }
+        }
+        &-nav {
+            margin-bottom: 50px;
+            &__item {
+                &:not(:last-child) {
+                    margin-right: 24px;
+                }
+            }
+        }
+
+        &-slider {
+            margin-bottom: 80px;
+        }
+        &-list {
+            
+
+            &__item {
+                
+                padding: 14px;
+                width: calc(50% - 10px);
+            }
+        }
+        &-pagination {
+            bottom: -50px !important;
+        }
+    }
+    @media screen and (max-width: 375px) {
+        &-list {
+            padding: 30px 20px;
+            &__item {
+                width: 100%;
+            }
+        }
+    }
+}
+
+
+.btn-inversion {
+    display: inline-block;
+    background: transparent;
+    border-radius: 32px;
+    padding: 18px 48px 16px;
+    color: #221F20;
+    line-height: 1;
+    border: 2px solid #221F20;
+    transition: 0.3s;
+    font-weight: 500;
+    font-size: 1.8rem;
+
+    cursor: pointer;
+
+    @media (min-width: 1025px) {
+        &:hover {
+            background: #221F20;
+            color: #fff;
+        }
+    }
+
+    @media (max-width: $mobile) {
+        padding: 15px 22px;
+        font-size: 1.4rem;
     }
 }
